Implement code downloading RNN and SVR methods

--- a/sentence_level_word_embeddings.ipynb
+++ b/sentence_level_word_embeddings.ipynb
@@ -7,6 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -305,9 +306,10 @@
       "source": [
         "!pip install transformers\n",
         "import torch\n",
+        "import torch.nn as nn\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from transformers import BertTokenizer, BertModel, AdamW, BertConfig"
+        "from transformers import BertTokenizer, BertModel"
       ],
       "execution_count": 0,
       "outputs": []
@@ -364,8 +366,8 @@
         "colab": {}
       },
       "source": [
-        "model = BertModel.from_pretrained(\"bert-base-multilingual-cased\")\n",
-        "model.cuda()"
+        "BERT_model = BertModel.from_pretrained(\"bert-base-multilingual-cased\")\n",
+        "BERT_model.cuda()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -395,8 +397,18 @@
         "  attention_mask_tensors = torch.tensor(attention_masks).to(device)\n",
         "\n",
         "  with torch.no_grad():\n",
-        "    last_hidden_states = model(input_tensors, attention_mask=attention_mask_tensors)\n",
-        "  return last_hidden_states[0][:,0,:].cpu().numpy()"
+        "    last_hidden_states = BERT_model(input_tensors, attention_mask=attention_mask_tensors)\n",
+        "  return last_hidden_states[0][:,0,:].cpu().numpy()\n",
+        "\n",
+        "\n",
+        "def get_BERT_words_embedding(input_tokens, attention_masks):\n",
+        "  input_tensors = torch.tensor(input_tokens).to(device)\n",
+        "  attention_mask_tensors = torch.tensor(attention_masks).to(device)\n",
+        "\n",
+        "  with torch.no_grad():\n",
+        "    last_hidden_states = BERT_model(input_tensors, attention_mask=attention_mask_tensors)\n",
+        "    feature_maps = last_hidden_states[0][:,1:,:].cpu()\n",
+        "  return feature_maps.numpy()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1164,8 +1176,6 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.linear_model import Ridge\n",
-        "\n",
         "# Tokenize our sentence with the BERT tokenizer.\n",
         "original_texts = open(\"./train.enzh.src\").readlines()\n",
         "translated_texts = open(\"./train.enzh.mt\").readlines()\n",
@@ -1177,6 +1187,14 @@
         "  train_features = np.concatenate((train_features, features))\n",
         "train_labels = labels\n",
         "\n",
+        "\n",
+        "print('Extracting BERT features batch 0')\n",
+        "train_words_features = get_BERT_words_embedding(input_ids[0:1000], input_attention_masks[0:1000])\n",
+        "for i in range(1, 7):\n",
+        "  print(f'Extracting BERT features batch {i}')\n",
+        "  features = get_BERT_words_embedding(input_ids[i*1000:(i + 1)*1000], input_attention_masks[i*1000:(i + 1)*1000])\n",
+        "  train_words_features = np.concatenate((train_words_features, features))\n",
+        "\n",
         "# Tokenize our sentence with the BERT tokenizer.\n",
         "dev_original_texts = open(\"./dev.enzh.src\").readlines()\n",
         "dev_translated_texts = open(\"./dev.enzh.mt\").readlines()\n",
@@ -1185,9 +1203,9 @@
         "test_labels = np.array(zh_val_scores).astype(float)\n",
         "\n",
         "test_input_ids, test_attention_masks = token_raw_inputs(dev_original_texts, dev_translated_texts)\n",
-        "test_features = get_BERT_embedding(test_input_ids, test_attention_masks)\n",
         "\n",
-        "\n"
+        "test_features = get_BERT_embedding(test_input_ids, test_attention_masks)\n",
+        "test_words_features = get_BERT_words_embedding(test_input_ids, test_attention_masks)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1210,6 +1228,7 @@
         "colab": {}
       },
       "source": [
+        "from sklearn.linear_model import Ridge\n",
         "clf = Ridge(alpha=2)\n",
         "clf.fit(train_features, train_labels)\n",
         "\n",
@@ -1266,6 +1285,188 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oA99AnefzrDd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "clf_poly = SVR(kernel='poly')\n",
+        "clf_poly.fit(train_features, train_labels)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y37KBh11VINQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## RNN with BERT word embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qdhha6xzVG5W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create RNN Model\n",
+        "class RNNModel(nn.Module):\n",
+        "  def __init__(self, input_dim, hidden_dim, layer_dim, output_dim, dropout):\n",
+        "    super(RNNModel, self).__init__()\n",
+        "    # Number of hidden dimensions\n",
+        "    self.hidden_dim = hidden_dim\n",
+        "    \n",
+        "    # Number of hidden layers\n",
+        "    self.layer_dim = layer_dim\n",
+        "    \n",
+        "    # RNN\n",
+        "    self.rnn = nn.GRU(input_dim, hidden_dim, layer_dim, batch_first=True, dropout=dropout)\n",
+        "    \n",
+        "    # Readout layer\n",
+        "    self.fc = nn.Linear(hidden_dim, output_dim)\n",
+        "    \n",
+        "  def forward(self, x):\n",
+        "    # Initialize hidden state with zeros\n",
+        "    h0 = torch.zeros(self.layer_dim, x.size(0), self.hidden_dim)\n",
+        "    # One time step\n",
+        "    out, hn = self.rnn(x, h0)\n",
+        "    out = self.fc(out[:, -1, :]) \n",
+        "    return out"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7z2mlxf5XMil",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Pytorch train and test sets\n",
+        "train_tensor = torch.from_numpy(train_words_features)\n",
+        "test_tensor = torch.from_numpy(test_words_features)\n",
+        "train_labels_tensor = torch.from_numpy(train_labels)\n",
+        "test_labels_tensor = torch.from_numpy(test_labels)\n",
+        "train_dataset = torch.utils.data.TensorDataset(train_tensor, train_labels_tensor)\n",
+        "test_dataset = torch.utils.data.TensorDataset(test_tensor, test_labels_tensor)\n",
+        "\n",
+        "# batch_size, epoch and iteration\n",
+        "batch_size = 100\n",
+        "n_iters = 2100\n",
+        "num_epochs = n_iters / (len(train_words_features) / batch_size)\n",
+        "num_epochs = int(num_epochs)\n",
+        "\n",
+        "# data loader\n",
+        "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size = batch_size, shuffle = False)\n",
+        "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size = batch_size, shuffle = False)\n",
+        "    \n",
+        "# Create RNN\n",
+        "input_dim = 768   # input dimension\n",
+        "hidden_dim = 400  # hidden layer dimension\n",
+        "layer_dim = 1     # number of hidden layers\n",
+        "output_dim = 1   # output dimension\n",
+        "dropout = 0\n",
+        "\n",
+        "model = RNNModel(input_dim, hidden_dim, layer_dim, output_dim, dropout)\n",
+        "\n",
+        "# SGD Optimizer\n",
+        "learning_rate = 0.05\n",
+        "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lVuDKj_fiCXM",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hwUp5MMfiF-q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "loss_list = []\n",
+        "\n",
+        "error = nn.MSELoss()\n",
+        "\n",
+        "print(f'Start training')\n",
+        "for epoch in range(num_epochs):\n",
+        "  for i, (features, labels) in enumerate(train_loader):\n",
+        "    \n",
+        "    # Clear gradients\n",
+        "    optimizer.zero_grad()\n",
+        "    \n",
+        "    # Forward propagation\n",
+        "    outputs = model(features).double()\n",
+        "    \n",
+        "    outputs = torch.reshape(outputs, (100, ))\n",
+        "    # Calculate softmax and ross entropy loss\n",
+        "    loss = error(outputs, labels)\n",
+        "    # Calculating gradients\n",
+        "    loss.backward()\n",
+        "    \n",
+        "    # Update parameters\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    # store loss and iteration\n",
+        "    loss_list.append(loss.data)\n",
+        "    pearson = pearsonr(labels, outputs.detach().numpy().reshape(100))\n",
+        "\n",
+        "    # Print Loss\n",
+        "    print(f'Epoch: {epoch} batch: {i}  Loss: {loss.data.item()} Pearson: {pearson[0]}')\n",
+        "  # Validation\n",
+        "  with torch.no_grad():\n",
+        "    outputs = model(test_tensor).cpu().numpy()\n",
+        "\n",
+        "  outputs = outputs.reshape(1000)\n",
+        "  loss = rmse(outputs, test_labels)\n",
+        "  pearson = pearsonr(test_labels, outputs)\n",
+        "\n",
+        "  print(f'Validation pearson: {pearson[0]}')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "roqdc-YRSle6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Validation\n",
+        "with torch.no_grad():\n",
+        "  outputs = model(test_tensor).cpu().numpy()\n",
+        "\n",
+        "outputs = outputs.reshape(1000)\n",
+        "loss = rmse(outputs, test_labels)\n",
+        "pearson = pearsonr(test_labels, outputs)\n",
+        "\n",
+        "print(f'loss: {loss} pearson: {pearson[0]}')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "z_eVxCFdo8kJ",
@@ -1312,12 +1513,45 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "471QN-wLp1ER",
+        "id": "SucTzYjuwabj",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# Tokenize our sentence with the BERT tokenizer.\n",
+        "dev_original_texts = open(\"./test.enzh.src\").readlines()\n",
+        "dev_translated_texts = open(\"./test.enzh.mt\").readlines()\n",
+        "\n",
+        "test_input_ids, test_attention_masks = token_raw_inputs(dev_original_texts, dev_translated_texts)\n",
+        "test_words_features = get_BERT_words_embedding(test_input_ids, test_attention_masks)\n",
+        "\n",
+        "test_tensor = torch.from_numpy(test_words_features)\n",
+        "with torch.no_grad():\n",
+        "  outputs = model(test_tensor).cpu().numpy()\n",
+        "\n",
+        "outputs = outputs.reshape(1000)\n",
+        "\n",
+        "downloadScores('RNN_model', outputs)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m-47rxX_whT8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Tokenize our sentence with the BERT tokenizer.\n",
+        "dev_original_texts = open(\"./test.enzh.src\").readlines()\n",
+        "dev_translated_texts = open(\"./test.enzh.mt\").readlines()\n",
+        "\n",
+        "test_input_ids, test_attention_masks = token_raw_inputs(dev_original_texts, dev_translated_texts)\n",
+        "test_features = get_BERT_embedding(test_input_ids, test_attention_masks)\n",
+        "outputs = clf_poly.predict(test_features)\n",
+        "downloadScores('BERT_SVR', outputs)"
       ],
       "execution_count": 0,
       "outputs": []
