--- a/sentence_level_word_embeddings.ipynb
+++ b/sentence_level_word_embeddings.ipynb
@@ -297,6 +297,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IyaxSoqk86T6",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Import Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5xA7VWIl2pDU",
@@ -322,8 +332,6 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "\n",
         "# If there's a GPU available...\n",
         "if torch.cuda.is_available():    \n",
         "\n",
@@ -343,20 +351,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "B_oFKMjNqRa0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "y-UmjwD597MS",
+        "colab_type": "text"
       },
       "source": [
-        "#Scores\n",
-        "f_train_scores = open(\"./train.enzh.scores\", 'r')\n",
-        "zh_train_scores = f_train_scores.readlines()\n",
-        "labels = np.array(zh_train_scores).astype(float)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "#### Get BERT pretrained model"
+      ]
     },
     {
       "cell_type": "code",
@@ -371,6 +373,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f_Knu4wo-HMu",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Helper functions\n",
+        "For tokenisation and extract features"
+      ]
     },
     {
       "cell_type": "code",
@@ -1185,7 +1198,7 @@
         "for i in range(1, 7):\n",
         "  features = get_BERT_embedding(input_ids[i*1000:(i + 1)*1000], input_attention_masks[i*1000:(i + 1)*1000])\n",
         "  train_features = np.concatenate((train_features, features))\n",
-        "train_labels = labels\n",
+        "train_labels = y_train_zh\n",
         "\n",
         "\n",
         "print('Extracting BERT features batch 0')\n",
@@ -1199,8 +1212,7 @@
         "dev_original_texts = open(\"./dev.enzh.src\").readlines()\n",
         "dev_translated_texts = open(\"./dev.enzh.mt\").readlines()\n",
         "\n",
-        "zh_val_scores = open(\"./dev.enzh.scores\", 'r').readlines()\n",
-        "test_labels = np.array(zh_val_scores).astype(float)\n",
+        "test_labels = y_val_zh\n",
         "\n",
         "test_input_ids, test_attention_masks = token_raw_inputs(dev_original_texts, dev_translated_texts)\n",
         "\n",
@@ -1230,12 +1242,12 @@
       "source": [
         "from sklearn.linear_model import Ridge\n",
         "clf = Ridge(alpha=2)\n",
-        "clf.fit(train_features, train_labels)\n",
+        "clf.fit(train_features, y_train_zh)\n",
         "\n",
         "predictions = clf.predict(test_features)\n",
         "\n",
-        "pearson = pearsonr(test_labels, predictions)\n",
-        "print(f'RMSE: {rmse(predictions, test_labels)} Pearson {pearson[0]}')\n",
+        "pearson = pearsonr(y_val_zh, predictions)\n",
+        "print(f'RMSE: {rmse(predictions, y_val_zh)} Pearson {pearson[0]}')\n",
         "'RMSE: 0.861979277558717 Pearson 0.3621685325738159'"
       ],
       "execution_count": 0,
@@ -1261,11 +1273,11 @@
       "source": [
         "for k in ['linear','poly','rbf','sigmoid']:\n",
         "    clf_t = SVR(kernel=k)\n",
-        "    clf_t.fit(train_features, train_labels)\n",
+        "    clf_t.fit(train_features, y_train_zh)\n",
         "    print(k)\n",
         "    predictions = clf_t.predict(test_features)\n",
-        "    pearson = pearsonr(test_labels, predictions)\n",
-        "    print(f'RMSE: {rmse(predictions,test_labels)} Pearson {pearson[0]}')\n",
+        "    pearson = pearsonr(y_val_zh, predictions)\n",
+        "    print(f'RMSE: {rmse(predictions, y_val_zh)} Pearson {pearson[0]}')\n",
         "    print()\n",
         "\n",
         "\n",
@@ -1293,7 +1305,7 @@
       },
       "source": [
         "clf_poly = SVR(kernel='poly')\n",
-        "clf_poly.fit(train_features, train_labels)"
+        "clf_poly.fit(train_features, y_train_zh)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1354,8 +1366,8 @@
         "# Pytorch train and test sets\n",
         "train_tensor = torch.from_numpy(train_words_features)\n",
         "test_tensor = torch.from_numpy(test_words_features)\n",
-        "train_labels_tensor = torch.from_numpy(train_labels)\n",
-        "test_labels_tensor = torch.from_numpy(test_labels)\n",
+        "train_labels_tensor = torch.from_numpy(y_train_zh)\n",
+        "test_labels_tensor = torch.from_numpy(y_val_zh)\n",
         "train_dataset = torch.utils.data.TensorDataset(train_tensor, train_labels_tensor)\n",
         "test_dataset = torch.utils.data.TensorDataset(test_tensor, test_labels_tensor)\n",
         "\n",
@@ -1441,27 +1453,6 @@
         "  pearson = pearsonr(test_labels, outputs)\n",
         "\n",
         "  print(f'Validation pearson: {pearson[0]}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "roqdc-YRSle6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Validation\n",
-        "with torch.no_grad():\n",
-        "  outputs = model(test_tensor).cpu().numpy()\n",
-        "\n",
-        "outputs = outputs.reshape(1000)\n",
-        "loss = rmse(outputs, test_labels)\n",
-        "pearson = pearsonr(test_labels, outputs)\n",
-        "\n",
-        "print(f'loss: {loss} pearson: {pearson[0]}')"
       ],
       "execution_count": 0,
       "outputs": []
